--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ button {
 </head>
 
 <body>
+<audio id="golpe">
+  <source src="golpe.mp3" type="audio/mpeg">
+</audio>
 
 <div id="estado">Cargando...</div>
 <button id="btn" disabled>¡MANOTAZO!</button>
@@ -162,8 +165,8 @@ btn.onclick = async () => {
     navigator.vibrate(200);
   }
 
-  const audio = new Audio("https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg");
-  audio.play().catch(()=>{});
+  document.getElementById("golpe").currentTime = 0;
+  document.getElementById("golpe").play();
 
   const clickRef = ref(db, `salas/${salaId}/clicks`);
   await push(clickRef, nombre);
